fixed the password visibility button, changed icon, modified width of username input

--- a/BankOfMyHouse.Client/src/app/auth/login/login.component.css
+++ b/BankOfMyHouse.Client/src/app/auth/login/login.component.css
@@ -127,3 +127,43 @@ label {
 .login-link a:hover {
   text-decoration: underline;
 }
+
+.password-input-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-input {
+  padding-right: 40px !important;
+}
+
+.password-toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  color: #666;
+  font-size: 18px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.password-toggle:hover {
+  color: #333;
+}
+
+.password-toggle:focus {
+  outline: none;
+}
+
+.username-input {
+  width: -webkit-fill-available !important;
+}
